
IF(UNIX)
  FIND_LIBRARY(M_LIB m)
  FIND_LIBRARY(DL_LIB dl)
ENDIF()

MACRO(SETUP_EXAMPLE EXAMPLE_NAME)
  ADD_EXECUTABLE(${EXAMPLE_NAME} ${EXAMPLE_SOURCES})
  TARGET_LINK_LIBRARIES(${EXAMPLE_NAME} ${M_LIB} ${DL_LIB} ${EXAMPLE_LIBRARIES})
ENDMACRO(SETUP_EXAMPLE)

SET(EXAMPLE_LIBRARIES floatfann)

SET(EXAMPLE_SOURCES cascade_train.c)
SETUP_EXAMPLE(cascade_train)

SET(EXAMPLE_SOURCES momentums.c)
SETUP_EXAMPLE(momentums)

SET(EXAMPLE_SOURCES mushroom.c)
SETUP_EXAMPLE(mushroom)

SET(EXAMPLE_SOURCES robot.c)
SETUP_EXAMPLE(robot)

SET(EXAMPLE_SOURCES scaling_test.c)
SETUP_EXAMPLE(scaling_test)

SET(EXAMPLE_SOURCES scaling_train.c)
SETUP_EXAMPLE(scaling_train)

SET(EXAMPLE_SOURCES simple_test.c)
SETUP_EXAMPLE(simple_test)

SET(EXAMPLE_SOURCES simple_train.c)
SETUP_EXAMPLE(simple_train)

SET(EXAMPLE_SOURCES steepness_train.c)
SETUP_EXAMPLE(steepness_train)

SET(EXAMPLE_SOURCES xor_sample.cpp)
SETUP_EXAMPLE(xor_sample)

SET(EXAMPLE_SOURCES xor_test.c)
SETUP_EXAMPLE(xor_test)

SET(EXAMPLE_SOURCES xor_train.c)
SETUP_EXAMPLE(xor_train)
