
FIND_PACKAGE(GTest)

IF(GTEST_FOUND)
  MACRO(SETUP_TEST TEST_NAME)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_SOURCES})
    TARGET_LINK_LIBRARIES(${TEST_NAME} ${TEST_LIBRARIES} ${GTEST_LIBRARIES})
  ENDMACRO(SETUP_TEST)

  SET(TEST_LIBRARIES floatfann)

  SET(TEST_SOURCES fann_tests.cpp main.cpp)
  SETUP_TEST(fann_tests)

  ENABLE_TESTING()
ENDIF()